alignment fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   }
   
   /* Mole buttons */
-  .mole {
+   .mole {
     background-color: #4CAF50;
     color: white;
     border: none;
@@ -17,6 +17,7 @@
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin: 30px 15px;
   }
   
   .mole:hover {
@@ -47,7 +48,7 @@
     margin-top: 20px;
     font-size: 20px;
     width: 100%;
-    animation: blinking 5s infinite;
+    animation: blinking 7s infinite;
   }
   @keyframes blinking{
     0% { opacity: 1; }
